[gd_scene load_steps=3 format=3 uid="uid://bua4wgebd1awq"]

[ext_resource type="Script" path="res://scripts/level_complete_scoreboard.gd" id="1_okflc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kpdse"]
bg_color = Color(0.12549, 0.12549, 0.12549, 0.901961)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.980392)
shadow_size = 8

[node name="LevelCompleteScoreboard" type="CanvasLayer"]
process_mode = 3
process_priority = 3
layer = 101
script = ExtResource("1_okflc")

[node name="ScoreboardPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(250, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -390.0
offset_top = -160.0
offset_right = -350.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kpdse")

[node name="VBoxContainer" type="VBoxContainer" parent="ScoreboardPanel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MarginContainer" type="MarginContainer" parent="ScoreboardPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="LevelNameLabel" type="Label" parent="ScoreboardPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Level Complete!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ScoreboardPanel/VBoxContainer"]
layout_mode = 2

[node name="StarContainer" type="HBoxContainer" parent="ScoreboardPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Star1" type="TextureRect" parent="ScoreboardPanel/VBoxContainer/StarContainer"]
layout_mode = 2

[node name="Star2" type="TextureRect" parent="ScoreboardPanel/VBoxContainer/StarContainer"]
layout_mode = 2

[node name="Star3" type="TextureRect" parent="ScoreboardPanel/VBoxContainer/StarContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="ScoreboardPanel/VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="ScoreboardPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TimeLabel" type="Label" parent="ScoreboardPanel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Time: 00:45.32"

[node name="DeathsLabel" type="Label" parent="ScoreboardPanel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Deaths: 3"

[node name="ScoreLabel" type="Label" parent="ScoreboardPanel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Score: 12500"

[node name="HSeparator3" type="HSeparator" parent="ScoreboardPanel/VBoxContainer"]
layout_mode = 2

[node name="GradeContainer" type="HBoxContainer" parent="ScoreboardPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GradeLabel" type="Label" parent="ScoreboardPanel/VBoxContainer/GradeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "A"

[node name="HSeparator4" type="HSeparator" parent="ScoreboardPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="ScoreboardPanel/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="ScoreboardPanel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Continue"

[node name="VSeparator" type="VSeparator" parent="ScoreboardPanel/VBoxContainer/ButtonsContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="ScoreboardPanel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Retry Level"

[node name="VSeparator2" type="VSeparator" parent="ScoreboardPanel/VBoxContainer/ButtonsContainer"]
layout_mode = 2

[node name="MenuButton" type="Button" parent="ScoreboardPanel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Main Menu"
